Scale context menus, tooltips, and file dialogs by current monitor's DPI

Sets the DPI awareness context on the UI thread to per monitor v2 at
startup, and on file dialog threads immediately after creation.

Bug: 624992
Change-Id: I86ae30e7deeedc207159c5a0672ad727d55ff388
Reviewed-on: https://chromium-review.googlesource.com/1212184
Reviewed-by: Robert Liao <robliao@chromium.org>
Commit-Queue: Taylor Bergquist <tbergquist@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591196}
Former-commit-id: 3804fed376973ffd8004615eb90035e486d1ce03